[package]
name = "kesa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
sorted-list = "0.2.0"
tch = "0.13.0"
