[package]
name = "kesa"
version = "0.1.0"
edition = "2021"
author = "heabeounMKTO"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
conv = "0.3.3"
indicatif = "0.17.6"
owo-colors = "3.5.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_derive = "1.0.181"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
sorted-list = "0.2.0"
tch = "0.13.0"
ort = { version = "2.0.0-alpha.4", features = ["tensorrt", "load-dynamic", "copy-dylibs", "download-binaries", "cuda"] }
base64 = "0.22.0"
lazy_static = "1.4.0"
plotters = "0.3.5"
rand = "0.8.5"
ndarray = "0.15.6"

[lib]
name = "kesa_lib"
path = "src/kesa_lib/lib.rs"


[[bin]]
name = "kesa_al"
path = "src/kesa_al.rs"

[[bin]]
name = "kesa_l2y"
path = "src/kesa_l2y.rs"
